# MimirKey

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cursor/rules/: 01-purpose.mdc  02-architecture-and-solid.mdc  03-cpp-and-qt.mdc  04-structure.mdc  05-style-and-naming.mdc  06-usecases.mdc  07-repositories.mdc  08-ui-ux.mdc  09-pr-checklist.mdc
scripts/: format.sh  grant_evdev_access.sh
src/application/usecases/: CopyText.hpp  LoadKeymap.cpp  LoadKeymap.hpp
src/infrastructure/ble/: ZmkBleLayerMonitor.cpp  ZmkBleLayerMonitor.hpp
src/infrastructure/fs/: FileKeymapRepository.cpp  FileKeymapRepository.hpp  QtClipboardRepository.hpp
src/infrastructure/input/: EvdevKeyboardMonitor.cpp  EvdevKeyboardMonitor.hpp
src/interface/: main.cpp
src/interface/qml/: Main.qml
src/interface/qml/components/: KeymapView.qml  LogPanel.qml  MainContent.qml  TopBar.qml
src/interface/viewmodels/: KeymapViewModel.cpp  KeymapViewModel.hpp
